--- a/CalculadoraApp.html
+++ b/CalculadoraApp.html
@@ -81,7 +81,7 @@
 </head>
 <body>
 	<div class="fundo">
-		<h1>João Pedro<h1>
+		<h1>João Pedro, Daniel Henrique, Yuri, Amanda Maria<h1>
 		<div class="calculadora">
 			<h3>Calculadora</h3>
 			<h6><p id="resultado"></p></h6>
