--- a/CalculadoraApp.html
+++ b/CalculadoraApp.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Calculadora</title>
+	<title>Calculadora - Turma 2°O</title>
 	<style>
 		*{
 			margin: 0;
